# Rubic-s-cube

./: .gitignore  CMakeLists.txt  README.md  a.txt  b.txt  test1.c  test2.c  test3.c  test3_head.h  test3_main.c  test4.c  test5.c  test6.c
